--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
             <div class="section" id="features">
                 <h2 class="section-title">🎯 למה MyMind?</h2>
                 <p class="intro-text">
-                    MyMind היא פלטפורמה מהפכנית שמאפשרת לך לשמור, לארגן ולמצוא את כל המידע החשוב בחייך במקום אחד. 
-                    עם בינה מלאכותית מתקדמת שמבינה את הקשר ועוזרת לך למצוא בדיוק מה שאתה מחפש.
+                    MyMind היא פלטפורמה שמאפשרת לך לשמור את כל המידע החשוב בחייך במקום אחד ולמצוא אותו בקלות. 
+                    תחשוב על זה כעל "מוח דיגיטלי שני" - מקום שבו אתה יכול לזרוק הכל ולמצוא בדיוק מה שאתה מחפש כשאתה צריך.
                 </p>
                 
                 <div class="features-grid">
@@ -450,8 +450,8 @@
                     </div>
                     <div class="feature-card">
                         <span class="feature-icon">🔒</span>
-                        <h3>אבטחה מתקדמת</h3>
-                        <p>המידע שלך מוגן בהצפנה ברמה צבאית ושמור בביטחון מלא בענן</p>
+                        <h3>אבטחה וביטחון</h3>
+                        <p>המידע שלך מוגן בהצפנה מתקדמת ונשמר בביטחון בענן</p>
                     </div>
                     <div class="feature-card">
                         <span class="feature-icon">⚡</span>
@@ -477,7 +477,7 @@
                     <div class="step">
                         <span class="step-number">2</span>
                         <h3>המערכת מארגנת</h3>
-                        <p>MyMind מנתח ומתייג את התוכן אוטומטically, יוצר קשרים והקשרים</p>
+                        <p>MyMind מזהה את סוג התוכן ומתייג אותו אוטומטית - בלי שתצטרך לחשוב על תיקיות</p>
                     </div>
                     <div class="step">
                         <span class="step-number">3</span>
@@ -524,13 +524,13 @@
                     </div>
                     <div class="link-card">
                         <h4>🎥 סרטון הדרכה</h4>
-                        <a href="https://youtu.be/tKrNdFSnqhw" target="_blank">YouTube Tutorial</a>
+                        <a href="https://youtu.be/tKrNdFSnjNw?si=VKlY6YOfHvUXCcJQ" target="_blank">YouTube Tutorial</a>
                         <div class="description">למדו איך להפיק את המקסימום מהמערכת</div>
                     </div>
                     <div class="link-card">
-                        <h4>📖 מדריך מפורט</h4>
-                        <a href="https://drive.google.com/file/d/1BZaqIW_MIV-ggfowTy_FlCHmbbYWOL_AI" target="_blank">Google Drive Guide</a>
-                        <div class="description">מדריך שלב אחר שלב לשימוש במערכת</div>
+                        <h4>🎨 הדגמה ועיצוב</h4>
+                        <a href="https://drive.google.com/file/d/1BZneLW_MiW-upjwvTQ_HOBn80YWD8_AK/view?fbclid=IwY2xjawK0jMdleHRuA2FlbQIxMABicmlkETFvS3dwTjBTUWRvN3YweFEyAR6qugk8MKKHB2yeu7EE0L85tfDoMP3lCSCHaF4fCyn60jAbgmrz8NFlwMEs1g_aem_9Sb6JZOnBjENNE6rPDWAJQ" target="_blank">Google Drive</a>
+                        <div class="description">הדגמה והסבר על העיצוב המהמם של MyMind</div>
                     </div>
                 </div>
             </div>
